# pickler

./: Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
src/: lib.rs  unpickle.rs
